# confidential-vote-

./: .gitignore  Anchor.toml  README.md
encrypted-ixs/src/: lib.rs
programs/confidential_voting_program/: Cargo.toml
programs/confidential_voting_program/src/: error.rs  lib.rs  state.rs
programs/confidential_voting_program/src/instructions/: final_result.rs  init_vote_poll.rs  mod.rs  vote_poll.rs
tests/: confidential_voting_program.ts
